force-app/main/default/objects/iMods_GTE__c/iMods_GTE__c.object-meta.xml
<CustomObject>
    <description>Object to recieve data from the imods gte process.  Acts as a holding table for rows from imods to be split and processed in RT</description>
    <label>iMods GTE</label>
    <nameField>
        <displayFormat>GTE-{0000000}</displayFormat>
        <label>iMods GTE Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>iMods GTEs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>