force-app/main/default/objects/iMods_GTE__c/fields/Accounting_Code__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Code__c</fullName>
    <label>Accounting_Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>