force-app/main/default/objects/iMods_GTE__c/fields/Amount_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Amount_To_Date__c</fullName>
    <label>Amount_To_Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>