force-app/main/default/objects/iMods_GTE__c/fields/Appeal_Code__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Code__c</fullName>
    <label>Appeal_Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>