force-app/main/default/objects/iMods_GTE__c/fields/Authorization_Code__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Code__c</fullName>
    <label>Authorization_Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>