force-app/main/default/objects/iMods_GTE__c/fields/Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Email__c</fullName>
    <label>Billing_Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>