force-app/main/default/objects/iMods_GTE__c/fields/Billing_Phone__c.field-meta.xml
<CustomField>
    <fullName>Billing_Phone__c</fullName>
    <label>Billing_Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>