force-app/main/default/objects/iMods_GTE__c/fields/Billing_Street_2__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street_2__c</fullName>
    <label>Billing_Street_2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>