force-app/main/default/objects/iMods_GTE__c/fields/Billing_Zip__c.field-meta.xml
<CustomField>
    <fullName>Billing_Zip__c</fullName>
    <label>Billing_Zip</label>
    <length>50</length>
    <type>Text</type>
</CustomField>