force-app/main/default/objects/iMods_GTE__c/fields/Business_name__c.field-meta.xml
<CustomField>
    <fullName>Business_name__c</fullName>
    <label>Business_name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>