force-app/main/default/objects/iMods_GTE__c/fields/Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ID__c</fullName>
    <label>Campaign ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>