force-app/main/default/objects/iMods_GTE__c/fields/Community_ID__c.field-meta.xml
<CustomField>
    <fullName>Community_ID__c</fullName>
    <label>Community ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>