force-app/main/default/objects/iMods_GTE__c/fields/Company_contact__c.field-meta.xml
<CustomField>
    <fullName>Company_contact__c</fullName>
    <label>Company_contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>