force-app/main/default/objects/iMods_GTE__c/fields/Credit_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Type__c</fullName>
    <label>Credit_Card_Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>