force-app/main/default/objects/iMods_GTE__c/fields/Customer_Trans_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Trans_Number__c</fullName>
    <label>Customer_Trans_Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>