force-app/main/default/objects/iMods_GTE__c/fields/Designation_ID__c.field-meta.xml
<CustomField>
    <fullName>Designation_ID__c</fullName>
    <label>Designation_ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>