force-app/main/default/objects/iMods_GTE__c/fields/Designation_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Designation_Instructions__c</fullName>
    <label>Designation_Instructions</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>