force-app/main/default/objects/iMods_GTE__c/fields/Designation_Name__c.field-meta.xml
<CustomField>
    <fullName>Designation_Name__c</fullName>
    <label>Designation_Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>