force-app/main/default/objects/iMods_GTE__c/fields/Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Event_ID__c</fullName>
    <label>Event_ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>