force-app/main/default/objects/iMods_GTE__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <label>Event_Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>