force-app/main/default/objects/iMods_GTE__c/fields/First_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Date__c</fullName>
    <label>First_Payment_Date</label>
    <type>DateTime</type>
</CustomField>