force-app/main/default/objects/iMods_GTE__c/fields/GivingtoIowaState_VetMedBreedofAnimal__c.field-meta.xml
<CustomField>
    <fullName>GivingtoIowaState_VetMedBreedofAnimal__c</fullName>
    <label>GivingtoIowaState-VetMedBreedofAnimal</label>
    <length>50</length>
    <type>Text</type>
</CustomField>