force-app/main/default/objects/iMods_GTE__c/fields/GivingtoIowaState_VetMedNameofanimal__c.field-meta.xml
<CustomField>
    <fullName>GivingtoIowaState_VetMedNameofanimal__c</fullName>
    <label>GivingtoIowaState-VetMedNameofanimal</label>
    <length>50</length>
    <type>Text</type>
</CustomField>