force-app/main/default/objects/iMods_GTE__c/fields/GivingtoIowaState_VetMedSpeciesofanimal__c.field-meta.xml
<CustomField>
    <fullName>GivingtoIowaState_VetMedSpeciesofanimal__c</fullName>
    <label>GivingtoIowaState-VetMedSpeciesofanimal</label>
    <length>50</length>
    <type>Text</type>
</CustomField>