force-app/main/default/objects/iMods_GTE__c/fields/Joint_donor_name__c.field-meta.xml
<CustomField>
    <fullName>Joint_donor_name__c</fullName>
    <label>Joint donor name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>