force-app/main/default/objects/iMods_GTE__c/fields/Make_a_Gift_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Make_a_Gift_Instructions__c</fullName>
    <label>Make_a_Gift_Instructions</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>