force-app/main/default/objects/iMods_GTE__c/fields/Make_a_Gift_to_Iowa_State_Honoree_Name__c.field-meta.xml
<CustomField>
    <fullName>Make_a_Gift_to_Iowa_State_Honoree_Name__c</fullName>
    <label>Make_a_Gift_to_Iowa_State_Honoree_Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>