force-app/main/default/objects/iMods_GTE__c/fields/Make_a_Gift_to_Iowa_State_Joint_gift_las__c.field-meta.xml
<CustomField>
    <fullName>Make_a_Gift_to_Iowa_State_Joint_gift_las__c</fullName>
    <label>Make_a_Gift_to_Iowa_State_Joint_gift_las</label>
    <length>50</length>
    <type>Text</type>
</CustomField>