force-app/main/default/objects/iMods_GTE__c/fields/MakeaGifttoIowaStateBusinessbillingAddr__c.field-meta.xml
<CustomField>
    <fullName>MakeaGifttoIowaStateBusinessbillingAddr__c</fullName>
    <label>MakeaGifttoIowaStateBusinessbillingAddr</label>
    <length>200</length>
    <type>Text</type>
</CustomField>