force-app/main/default/objects/iMods_GTE__c/fields/MakeaGifttoIowaStateCompanyContactPhone__c.field-meta.xml
<CustomField>
    <fullName>MakeaGifttoIowaStateCompanyContactPhone__c</fullName>
    <label>MakeaGifttoIowaStateCompanyContactPhone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>