force-app/main/default/objects/iMods_GTE__c/fields/MakeGifttoIowaStateGiftnotificattionAddr__c.field-meta.xml
<CustomField>
    <fullName>MakeGifttoIowaStateGiftnotificattionAddr__c</fullName>
    <label>MakeGifttoIowaStateGiftnotificattionAddr</label>
    <length>50</length>
    <type>Text</type>
</CustomField>