force-app/main/default/objects/iMods_GTE__c/fields/member_id__c.field-meta.xml
<CustomField>
    <fullName>member_id__c</fullName>
    <label>member_id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>