force-app/main/default/objects/iMods_GTE__c/fields/Next_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Payment_Date__c</fullName>
    <label>Next_Payment_Date</label>
    <type>DateTime</type>
</CustomField>