force-app/main/default/objects/iMods_GTE__c/fields/Original_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_Transaction_ID__c</fullName>
    <externalId>true</externalId>
    <label>Original_Transaction_ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>