force-app/main/default/objects/iMods_GTE__c/fields/Payments_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Payments_Remaining__c</fullName>
    <label>Payments_Remaining</label>
    <length>50</length>
    <type>Text</type>
</CustomField>