force-app/main/default/objects/iMods_GTE__c/fields/Pledge_Form_Pledge_Number_R__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Form_Pledge_Number_R__c</fullName>
    <label>Pledge_Form_Pledge_Number_R</label>
    <length>50</length>
    <type>Text</type>
</CustomField>