force-app/main/default/objects/iMods_GTE__c/fields/Pledge_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Numbers__c</fullName>
    <label>Pledge_Numbers</label>
    <length>50</length>
    <type>Text</type>
</CustomField>