force-app/main/default/objects/iMods_GTE__c/fields/Pledge_Payment_Pledge_Number_New__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Payment_Pledge_Number_New__c</fullName>
    <label>Pledge Payment Pledge Number New</label>
    <length>50</length>
    <type>Text</type>
</CustomField>