force-app/main/default/objects/iMods_GTE__c/fields/PostedToRT__c.field-meta.xml
<CustomField>
    <fullName>PostedToRT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PostedToRT</label>
    <type>Checkbox</type>
</CustomField>