force-app/main/default/objects/iMods_GTE__c/fields/Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Date__c</fullName>
    <label>Purchase_Date</label>
    <type>DateTime</type>
</CustomField>