force-app/main/default/objects/iMods_GTE__c/fields/Reiman_Membership_Add_Gift_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reiman_Membership_Add_Gift_Amount__c</fullName>
    <label>Reiman Membership - Add Gift Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>