force-app/main/default/objects/iMods_GTE__c/fields/Reiman_Membership_Reiman_Member_Levels__c.field-meta.xml
<CustomField>
    <fullName>Reiman_Membership_Reiman_Member_Levels__c</fullName>
    <label>Reiman Membership - Reiman Member Levels</label>
    <length>50</length>
    <type>Text</type>
</CustomField>