force-app/main/default/objects/iMods_GTE__c/fields/Reiman_Membership_Reiman_status__c.field-meta.xml
<CustomField>
    <fullName>Reiman_Membership_Reiman_status__c</fullName>
    <label>Reiman Membership - Reiman status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>