force-app/main/default/objects/iMods_GTE__c/fields/ReimanMembershipReimansecondmemberfirst__c.field-meta.xml
<CustomField>
    <fullName>ReimanMembershipReimansecondmemberfirst__c</fullName>
    <label>ReimanMembershipReimansecondmemberfirst</label>
    <length>50</length>
    <type>Text</type>
</CustomField>