force-app/main/default/objects/iMods_GTE__c/fields/ReimanMembershipReimansecondmemberlast__c.field-meta.xml
<CustomField>
    <fullName>ReimanMembershipReimansecondmemberlast__c</fullName>
    <label>ReimanMembershipReimansecondmemberlast</label>
    <length>50</length>
    <type>Text</type>
</CustomField>