force-app/main/default/objects/iMods_GTE__c/fields/Retrieval_Code__c.field-meta.xml
<CustomField>
    <fullName>Retrieval_Code__c</fullName>
    <label>Retrieval_Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>