force-app/main/default/objects/iMods_GTE__c/fields/Review_Transaction_v2__c.field-meta.xml
<CustomField>
    <fullName>Review_Transaction_v2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Review Transaction (v2)</label>
    <referenceTo>ucinn_ascendv2__Review_Transaction_v2__c</referenceTo>
    <relationshipLabel>iMods GTEs</relationshipLabel>
    <relationshipName>iMods_GTEs</relationshipName>
    <type>Lookup</type>
</CustomField>