force-app/main/default/objects/iMods_GTE__c/fields/Row_Insert_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Row_Insert_Timestamp__c</fullName>
    <label>Row_Insert_Timestamp</label>
    <type>DateTime</type>
</CustomField>