force-app/main/default/objects/iMods_GTE__c/fields/Scheduled_Payments_Active__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Payments_Active__c</fullName>
    <label>Scheduled_Payments_Active</label>
    <length>50</length>
    <type>Text</type>
</CustomField>