force-app/main/default/objects/iMods_GTE__c/fields/Short_Donation_Page_I_honor_or_memory_of__c.field-meta.xml
<CustomField>
    <fullName>Short_Donation_Page_I_honor_or_memory_of__c</fullName>
    <label>Short_Donation_Page_I_honor_or_memory_of</label>
    <length>50</length>
    <type>Text</type>
</CustomField>