force-app/main/default/objects/iMods_GTE__c/fields/Short_Donation_Page_In_honor_or_memory_n__c.field-meta.xml
<CustomField>
    <fullName>Short_Donation_Page_In_honor_or_memory_n__c</fullName>
    <label>Short_Donation_Page_In_honor_or_memory_n</label>
    <length>100</length>
    <type>Text</type>
</CustomField>