force-app/main/default/objects/iMods_GTE__c/fields/Short_Donation_Page_Make_a_Gift_Instruct__c.field-meta.xml
<CustomField>
    <fullName>Short_Donation_Page_Make_a_Gift_Instruct__c</fullName>
    <label>Short_Donation_Page_Make_a_Gift_Instruct</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>