force-app/main/default/objects/iMods_GTE__c/fields/Testing123Clickheretofindmatchcompdata__c.field-meta.xml
<CustomField>
    <fullName>Testing123Clickheretofindmatchcompdata__c</fullName>
    <label>Testing123Clickheretofindmatchcompdata</label>
    <length>50</length>
    <type>Text</type>
</CustomField>