force-app/main/default/objects/iMods_GTE__c/fields/Total_Scheduled_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Scheduled_Amount__c</fullName>
    <label>Total_Scheduled_Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>