force-app/main/default/objects/iMods_GTE__c/listViews/iMods_GTEs_Today.listView-meta.xml
<ListView>
    <fullName>iMods_GTEs_Today</fullName>
    <columns>NAME</columns>
    <columns>ID__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Business_name__c</columns>
    <columns>Payment_Type__c</columns>
    <columns>Purchase_Date__c</columns>
    <columns>PostedToRT__c</columns>
    <columns>Campaign_Name__c</columns>
    <columns>Transaction_ID__c</columns>
    <columns>Original_Transaction_ID__c</columns>
    <columns>Review_Transaction_v2__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Appeal_Code__c</columns>
    <columns>Pledge_Numbers__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>iMods GTEs Today</label>
</ListView>